metrics/prometheus/main/httproute-protected/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-main-protected
  namespace: prometheus
spec:
  hostnames:
  - prometheus-main-m.suffix-automatic-replace
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: gateways
    name: main-public
    sectionName: https-main-protected
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ''
      kind: Service
      name: prom-main
      port: 9090
      weight: 1
